crates/evaluator/src/snapshots/kcl_evaluator__tests__lambda_3.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
x: 2
