crates/evaluator/src/snapshots/kcl_evaluator__tests__lambda_7.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
x:
  r: 1
'y':
  v:
    r: 1
