crates/evaluator/src/snapshots/kcl_evaluator__tests__lambda_8.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
test:
- name: test
