crates/evaluator/src/snapshots/kcl_evaluator__tests__lambda_9.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
my_bar:
  values:
  - 123
  foo_result:
  - 456
