crates/evaluator/src/snapshots/kcl_evaluator__tests__lazy_scope_1.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
data:
  b: 3
  a: 1
  c: 2
