crates/evaluator/src/snapshots/kcl_evaluator__tests__lazy_scope_2.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
data1:
  name: '1'
data2:
  name: '1'
  version: v0.1.0
version: v0.1.0
