crates/evaluator/src/snapshots/kcl_evaluator__tests__list_comp1.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
a:
- 你
- 好
